--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,35 @@
 <mat-drawer-container class="example-container" autosize>
-    <mat-drawer #drawer class="example-sidenav" mode="side">
-        <p>Auto-resizing sidenav</p>
-        <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-        <button (click)="showFiller = !showFiller" mat-raised-button>
-Toggle extra text
-</button>
+    <mat-drawer dir="rtl" position="end" #drawer class="example-sidenav" mode="side" [opened]="true">
+        <mat-form-field color="white" style="text-align: right" class="example-full-width" appearance="fill">
+            <mat-label color="white">חיפוש</mat-label>
+            <input matInput placeholder="... הקלד כאן">
+        </mat-form-field>
+        <mat-list dir='rtl' role="list">
+            <mat-list-item *ngFor="let item of (layers | async); let i = index;">
+                <mat-checkbox class="example-margin"></mat-checkbox>
+                <button mat-button> {{item.caption | json}}</button>
+            </mat-list-item>
+        </mat-list>
     </mat-drawer>
 
 
-    <div class="sidenav-content">
+    <div style="text-align: right" class="sidenav-content">
+        <mat-form-field color="white" style="width: 100%;text-align: right" class="example-full-width" appearance="fill">
+            <mat-label color="white">GOVMAP ברוכים הבאים לאתר המפות של</mat-label>
+            <input readonly matInput>
+        </mat-form-field>
+        <div style="margin-bottom: 0.5rem;">
+            <button mat-button-raised style="font-size: 20px;color: grey;padding: 0 1rem; border: 1px solid rgba(0,0,0,0.2);" type="button" mat-button (click)="drawer.toggle()">
+            פתח/סגור שכבות
+            </button>
+
+        </div>
+
         <div>
             <router-outlet></router-outlet>
 
         </div>
 
-        <button type="button" mat-button (click)="drawer.toggle()">
-          Toggle sidenav
-        </button>
     </div>
 
 </mat-drawer-container>
