--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,18 @@
 <mat-drawer-container class="example-container" autosize>
     <mat-drawer dir="rtl" position="end" #drawer class="example-sidenav" mode="side" [opened]="true">
         <mat-form-field color="white" style="text-align: right" class="example-full-width" appearance="fill">
-            <mat-label color="white">חיפוש</mat-label>
-            <input matInput placeholder="... הקלד כאן">
+            <mat-label color="white">שכבות</mat-label>
+            <input readonly matInput placeholder="... הקלד כאן">
         </mat-form-field>
+
+
         <mat-list dir='rtl' role="list">
-            <mat-list-item *ngFor="let item of (layers | async); let i = index;">
-                <mat-checkbox class="example-margin"></mat-checkbox>
-                <button mat-button> {{item.caption | json}}</button>
+            <mat-list-item *ngFor="let item of ($layers | async); let i = index;">
+                <mat-checkbox #checkbox class="example-margin" (change)="toggleLayers($event, item)"></mat-checkbox>
+                <button mat-button> {{item.caption}}</button>
             </mat-list-item>
         </mat-list>
+
     </mat-drawer>
 
 
@@ -18,7 +21,7 @@
             <mat-label color="white">GOVMAP ברוכים הבאים לאתר המפות של</mat-label>
             <input readonly matInput>
         </mat-form-field>
-        <div style="margin-bottom: 0.5rem;">
+        <div style="margin-bottom: 1rem;">
             <button mat-button-raised style="font-size: 20px;color: grey;padding: 0 1rem; border: 1px solid rgba(0,0,0,0.2);" type="button" mat-button (click)="drawer.toggle()">
             פתח/סגור שכבות
             </button>
